kubernetes-networks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework
  labels:
    name: home3-label
