kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homework
  name: deployment
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: workdir
              mountPath: /homework
          lifecycle:
            preStop:
              exec:
                command: [ "rm", "-f", "/homework/index.html" ]
          readinessProbe:
            httpGet:
              path: /homework/index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
      nodeSelector:
        homework: "true"
      volumes:
        - name: workdir
          emptyDir: { }
